# vertigo

./: .gitmodules  CMakeLists.txt
examples/robustISAM2/: CMakeLists.txt  robustISAM2.cpp  switchable_sam.ipynb  write_graph.cpp  write_graph.h
include/gtsam2/: BetweenFactorHai.h  betweenFactorMaxMix.h  betweenFactorSwitchable.h  switchVariableLinear.h  switchVariableSigmoid.h
src/: CMakeLists.txt
